# fire_node

./: CMakeLists.txt  README.md  package.xml  siar_fire.py
launch/: thermal.launch
scripts/: siar_fire.py
